# token-leak-profiler

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: spec-checklist.md
docs/blog/: 2026-05-28-token-leak-profiler-making-of.md  2026-05-29-cycle-8-structural-prevention.md  2026-05-29-dogfooding-seven-cycles.md
docs/council/: 2026-05-29-cache-miss-penalty-deliberation.md  2026-05-29-mcp-server-overhead-deliberation.md
tests/: test_aggregate.py  test_cli_e2e.py  test_config.py  test_count_tokens.py  test_parser.py  test_reporter.py  test_rules_self_application.py  test_schema_dump.py  test_tokenizer_local.py  test_types.py
tests/test_analyzers/: test_base.py  test_cache_miss_penalty.py  test_cache_turnover_cost.py  test_format_boilerplate.py  test_mcp_server_overhead.py  test_reasoning_overrun.py  test_redundant_restatement.py  test_roundtrip_inflation.py  test_stale_context.py  test_subagent_context_overdump.py  test_system_prompt_audit.py  test_tool_result_repetition.py  test_tool_schema_bloat.py  test_verbose_tool_results.py
tlp/: cli.py  types.py
tlp/aggregate/: __init__.py  reporter.py  run.py  types.py
tlp/analyzers/: __init__.py  _helpers.py  base.py  cache_miss_penalty.py  cache_turnover_cost.py  format_boilerplate.py  mcp_server_overhead.py  reasoning_overrun.py  redundant_restatement.py  roundtrip_inflation.py  stale_context.py  subagent_context_overdump.py  system_prompt_audit.py  tool_result_repetition.py  tool_schema_bloat.py  verbose_tool_results.py
tlp/config/: __init__.py  defaults.yaml  measurements.yaml  pricing.yaml
(+51 files in other folders)
