[project]
name = "tlp"
version = "0.5.0"
description = "Token Leak Profiler — classify wasted LLM tokens by 7 leak levers"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "datasketch>=1.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
verify = ["anthropic>=0.40"]

[project.scripts]
tlp = "tlp.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "syrupy>=4.6",
    "ruff>=0.5",
    "mypy>=1.10",
    "anthropic>=0.40",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tlp"]
